--- a/index.html
+++ b/index.html
@@ -7,24 +7,25 @@
   </head>
   <body>
     <!-- 1 -->
-    <!-- <select name="#" id="select">
+    <!-- <select name="drink" class="drinks">
       <option value="coffee">Кава</option>
       <option value="tea">Чай</option>
       <option value="juise">Сік</option>
     </select> -->
     <!-- 2-5 -->
-    <!-- <input type="text" id="input" />
-    <button id="button">Пітвердіть</button> -->
+    <!-- <input type="text" class="input" />
+    <button class="button">Пітвердіть</button> -->
     <!--  6 -->
 
-    <!-- <input type="number" id="first-number" ="sdf" />
-    <select name="#" id="select">
+    <input type="number" class="first-number" />
+    <select name="#" class="sign">
       <option value="+">+</option>
       <option value="-">-</option>
       <option value="*">*</option>
       <option value="/">/</option>
     </select>
-    <button id="button-calculator">Порахувати</button> -->
+    <input type="number" class="second-number" />
+    <button class="check">Check</button>
     <script src="/script.js" type="module"></script>
   </body>
 </html>
